--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^16.0.1",
     "@heroicons/react": "^2.2.0",
     "autoprefixer": "^10.4.21",
+    "contentful": "^11.5.23",
     "framer-motion": "^12.12.2",
     "lucide-react": "^0.511.0",
     "next": "15.1.8",
@@ -21,7 +23,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
+    "@types/node": "^20.17.50",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
