--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@heroicons/react": "^2.2.0",
     "autoprefixer": "^10.4.21",
     "contentful": "^11.5.23",
+    "contentful-management": "^11.52.2",
+    "dotenv": "^16.5.0",
     "framer-motion": "^12.12.2",
     "lucide-react": "^0.511.0",
     "next": "15.1.8",
